...
  static const String sources = '/top-headlines/sources';

  static const String defaultCountry = 'us';
  static const int pageSize = 20;

  static const List<String> categories = [
    'Latest',
    'Business',
    'Entertainment',
    'General',
    'Health',
    'Science',
    'Sports',
    'Technology',
  ];
}

